--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,52 @@
   --text-color: #131313;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
+  --background-color: white;
+  --light-color: #f8f8f8;
+  --dark-color: #505050;
+  --text-color: #131313;
+  --link-color: #3b63fb;
+  --link-hover-color: #1d3ecf;
+  --berry: #C83192;
+  --bright-blue: #00B3E2;
+  --bright-green: #C1D52F;
+  --bright-yellow: #FDDC3F;
+  --dark-blue: #005CB9;
+  --gold: #F8BE15;
+  --green: #128641;
+  --light-pink: #F1CBE4;
+  --navy-blue: #0E4482;
+  --orange: #F48C21;
+  --orange-red: #F05B32;
+  --purple: #904799;
+  --red: #E21D46;
+  --sky-blue: #A2DAE8;
+  --turquoise: #3FC1C0;
+  --yellow: #FDDC3F;
+  --white: #FFF;
+  --off-white: #F6F6F6;
+  --light-grey: #CBCBCB;
+  --black: #000;
+  --light-red: #ed7790;
+  --b-green: #419e66;
+  --laz-black: #35302C;
+  --laz-blue: #00B3E2;
+  --laz-logo-blue: #31409A;
+  --faz-purple: #5D2C8A;
+  --faz-pink: #C83493;
+  --faz-light-blue: #00C0F3;
+  --waz-yellow: #F3A814;
+  --waz-red: #E21D46;
+  --waz-blue: #005CB9;
+  --rpe-dark-blue: #1A1831;
+  --rpe-dark-purple: #5E2967;
+  --rpe-magenta: #942A6A;
+  --rpe-salmon: #C24A48;
+  --rpe-gold: #D5A13D;
+  --vaz-red-pastel: #FFCECB;
+  --vaz-blue-pastel: #ECEFF4;
+  --rk-blue: #D9E7F5;
+  --rk-blue-dark: #1E7DDD
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
