--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,14 +235,45 @@ button {
   transition: color 0.4s, background-color 0.4s;
 }
 
+/* primary button colors */
 .button.bgcolor-red {
-  border-color: var(--red);
   background-color: var(--red);
+  border-color: var(--red);
 }
 
 .button.bgcolor-red:hover {
   color: var(--red);
   border-color: var(--red);
+}
+
+.button.bgcolor-gold {
+  background-color: var(--gold);
+  border-color: var(--gold);
+}
+
+.button.bgcolor-gold:hover {
+  color: var(--gold);
+  border-color: var(--gold);
+}
+
+.button.bgcolor-light-blue {
+  background-color: var(--faz-light-blue);
+  border-color: var(--faz-light-blue);
+}
+
+.button.bgcolor-light-blue:hover {
+  color: var(--faz-light-blue);
+  border-color: var(--faz-light-blue);
+}
+
+.button.bgcolor-berry {
+  background-color: var(--berry);
+  border-color: var(--berry);
+}
+
+.button.bgcolor-berry:hover {
+  color: var(--berry);
+  border-color: var(--berry);
 }
 
 .button.textcolor-white {
@@ -253,26 +284,44 @@ button {
   background-color: var(--white);
 }
 
-a.button:hover,
-a.button:focus,
-button:hover,
-button:focus {
-  background-color: var(--link-hover-color);
-  cursor: pointer;
+.button.textcolor-black {
+  color: var(--laz-black);
 }
 
-button:disabled,
-button:disabled:hover {
-  background-color: var(--light-color);
-  cursor: unset;
+.button.textcolor-black:hover {
+  background-color: var(--laz-black);
 }
+
+/* primary button colors end */
 
 a.button.secondary,
 button.secondary {
   background-color: unset;
-  border: 2px solid currentcolor;
-  color: var(--text-color);
+  border: 2px solid;
 }
+
+/* secondary button colors */
+.button.secondary.textcolor-red {
+  color: var(--red);
+  border-color: var(--red);
+}
+
+.button.secondary.textcolor-light-blue {
+  color: var(--faz-light-blue);
+  border-color: var(--faz-light-blue);
+}
+
+.button.secondary.textcolor-berry {
+  color: var(--berry);
+  border-color: var(--berry);
+}
+
+.button.secondary.textcolor-black {
+  color: var(--laz-black);
+  border-color: var(--laz-black);
+}
+
+/* secondary button colors end */
 
 main img {
   max-width: 100%;
