--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,11 +57,19 @@
   --vaz-red-pastel: #FFCECB;
   --vaz-blue-pastel: #ECEFF4;
   --rk-blue: #D9E7F5;
-  --rk-blue-dark: #1E7DDD
+  --rk-blue-dark: #1E7DDD;
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback, sans-serif, montserrat-normal-400-fallback;
-  --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif, solway-normal-400-fallback;
+  --body-font-family: montserrat-normal, sans-serif, montserrat-normal-fallback;
+  --heading-font-family: solway-normal, sans-serif, solway-normal-fallback;
+
+  /* font weight */
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 600;
+  --font-weight-extra-bold: 700;
+
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -94,32 +102,19 @@
 }
 
 @font-face {
-  font-family: 'montserrat-normal-400-fallback';
+  font-family: montserrat-normal-fallback;
   size-adjust: 111.311%;
   src: local("Arial");
 }
 
 @font-face {
-  font-family: 'solway-normal-400-fallback';
+  font-family: solway-normal-fallback;
   size-adjust: 113.741%;
   src: local("Arial");
 }
 
-@media (width >= 900px) {
-  :root {
-    /* body sizes */
-    --body-font-size-m: 18px;
-    --body-font-size-s: 16px;
-    --body-font-size-xs: 14px;
-
-    /* heading sizes */
-    --heading-font-size-xxl: 45px;
-    --heading-font-size-xl: 36px;
-    --heading-font-size-l: 28px;
-    --heading-font-size-m: 22px;
-    --heading-font-size-s: 20px;
-    --heading-font-size-xs: 18px;
-  }
+*, ::before, ::after {
+  box-sizing: border-box;
 }
 
 body {
@@ -129,7 +124,7 @@ body {
   color: var(--text-color);
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
-  line-height: 1.6;
+  line-height: 1.4286;
 }
 
 body.appear {
@@ -220,47 +215,113 @@ a:hover {
 /* buttons */
 a.button:any-link,
 button {
-  box-sizing: border-box;
   display: inline-block;
   max-width: 100%;
   margin: 12px 0;
   border: 2px solid transparent;
-  border-radius: 2.4em;
-  padding: 0.5em 1.2em;
+  border-radius: 5em;
+  padding: 8px 40px 6px;
   font-family: var(--body-font-family);
   font-style: normal;
-  font-weight: 500;
-  line-height: 1.25;
+  font-size: var(--body-font-size-s);
+  font-weight: var(--font-weight-extra-bold);
   text-align: center;
+  text-transform: uppercase;
   text-decoration: none;
-  background-color: var(--link-color);
-  color: var(--background-color);
   cursor: pointer;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  transition: color 0.4s, background-color 0.4s;
 }
 
-a.button:hover,
-a.button:focus,
-button:hover,
-button:focus {
-  background-color: var(--link-hover-color);
-  cursor: pointer;
+/* primary button colors */
+.button.bgcolor-red {
+  background-color: var(--red);
+  border-color: var(--red);
 }
 
-button:disabled,
-button:disabled:hover {
-  background-color: var(--light-color);
-  cursor: unset;
+.button.bgcolor-red:hover {
+  color: var(--red);
+  border-color: var(--red);
 }
+
+.button.bgcolor-gold {
+  background-color: var(--gold);
+  border-color: var(--gold);
+}
+
+.button.bgcolor-gold:hover {
+  color: var(--gold);
+  border-color: var(--gold);
+}
+
+.button.bgcolor-light-blue {
+  background-color: var(--faz-light-blue);
+  border-color: var(--faz-light-blue);
+}
+
+.button.bgcolor-light-blue:hover {
+  color: var(--faz-light-blue);
+  border-color: var(--faz-light-blue);
+}
+
+.button.bgcolor-berry {
+  background-color: var(--berry);
+  border-color: var(--berry);
+}
+
+.button.bgcolor-berry:hover {
+  color: var(--berry);
+  border-color: var(--berry);
+}
+
+.button.textcolor-white {
+  color: var(--white);
+}
+
+.button.textcolor-white:hover {
+  background-color: var(--white);
+}
+
+.button.textcolor-black {
+  color: var(--laz-black);
+}
+
+.button.textcolor-black:hover {
+  background-color: var(--laz-black);
+}
+
+/* primary button colors end */
 
 a.button.secondary,
 button.secondary {
   background-color: unset;
-  border: 2px solid currentcolor;
-  color: var(--text-color);
+  border: 2px solid;
 }
+
+/* secondary button colors */
+.button.secondary.textcolor-red {
+  color: var(--red);
+  border-color: var(--red);
+}
+
+.button.secondary.textcolor-light-blue {
+  color: var(--faz-light-blue);
+  border-color: var(--faz-light-blue);
+}
+
+.button.secondary.textcolor-berry {
+  color: var(--berry);
+  border-color: var(--berry);
+}
+
+.button.secondary.textcolor-black {
+  color: var(--laz-black);
+  border-color: var(--laz-black);
+}
+
+/* secondary button colors end */
 
 main img {
   max-width: 100%;
