--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,7 +189,7 @@ pre {
   white-space: pre;
 }
 
-main > div {
+main > div > div {
   margin: 40px 16px;
 }
 
@@ -341,11 +341,11 @@ main img {
 }
 
 /* sections */
-main > .section {
+main > .section-outer > .section {
   margin: 40px 0;
 }
 
-main > .section > div {
+main > .section-outer > .section > div {
   max-width: 1200px;
   margin: auto;
   padding: 0 24px;
@@ -356,7 +356,7 @@ main > .section:first-of-type {
 }
 
 @media (width >= 900px) {
-  main > .section > div {
+  main > .section-outer > .section > div {
     padding: 0 32px;
   }
 }
