--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -24,56 +24,58 @@
   flex: 0 0 100%;
   scroll-snap-align: start;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
   position: relative;
   width: 100%;
   min-height: min(50vw, calc(100dvh - var(--header-height)));
-}
-
-.carousel .carousel-slide:has(.carousel-slide-content[data-align='center']) {
-  align-items: center;
-}
-
-.carousel .carousel-slide:has(.carousel-slide-content[data-align='right']) {
-  align-items: flex-end;
+  user-select: none;
 }
 
 .carousel .carousel-slide .carousel-slide-image picture {
-  position: absolute;
+  position: relative;
   inset: 0;
 }
 
 .carousel .carousel-slide .carousel-slide-image picture > img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  flex: 0 50%;
+  border-radius: 20px;
+  user-select: none;
 }
 
 .carousel .carousel-slide .carousel-slide-content {
-  z-index: 1;
-  margin: 68px;
-  padding: 16px;
-  color: white;
-  background-color: rgba(19 19 19 / 75%);
-  position: relative;
-  width: var(--slide-content-width, auto);
+  flex: 0 50%;
 }
 
+.carousel .carousel-slide .carousel-slide-content h2 {
+  color: #31409A;
+}
+
+.carousel .carousel-slide .carousel-slide-content h4 {
+  color: inherit;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: none;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: none;
+}
 .carousel .carousel-slide-indicators {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 6px 12px;
   padding: 12px;
-  background-color: var(--light-color);
   line-height: 0;
 }
 
 .carousel .carousel-slide-indicator button {
-  width: 24px;
-  height: 24px;
+  width: 12px;
+  height: 12px;
   margin: 0;
   padding: 0;
   border-radius: 50%;
