--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -56,7 +56,7 @@
 
 .carousel .carousel-slide .carousel-slide-content h4 {
   color: inherit;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 18px;
   font-weight: 500;
   text-transform: none;
