--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -51,7 +51,7 @@
 }
 
 .carousel .carousel-slide .carousel-slide-content h2 {
-  color: #31409A;
+  color: var(--laz-logo-blue);
   font-size: 26px;
 }
 
