--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -24,41 +24,42 @@
   flex: 0 0 100%;
   scroll-snap-align: start;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
   position: relative;
   width: 100%;
   min-height: min(50vw, calc(100dvh - var(--header-height)));
-}
-
-.carousel .carousel-slide:has(.carousel-slide-content[data-align='center']) {
-  align-items: center;
-}
-
-.carousel .carousel-slide:has(.carousel-slide-content[data-align='right']) {
-  align-items: flex-end;
+  user-select: none;
 }
 
 .carousel .carousel-slide .carousel-slide-image picture {
-  position: absolute;
+  position: relative;
   inset: 0;
 }
 
 .carousel .carousel-slide .carousel-slide-image picture > img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  flex: 0 40%;
+  border-radius: 20px;
+  user-select: none;
 }
 
 .carousel .carousel-slide .carousel-slide-content {
-  z-index: 1;
-  margin: 68px;
-  padding: 16px;
-  color: white;
-  background-color: rgba(19 19 19 / 75%);
-  position: relative;
-  width: var(--slide-content-width, auto);
+  flex: 0 60%;
+}
+
+.carousel .carousel-slide .carousel-slide-content h2 {
+  color: var(--laz-logo-blue);
+  font-size: 26px;
+}
+
+.carousel .carousel-slide .carousel-slide-content p {
+  color: inherit;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: none;
 }
 
 .carousel .carousel-slide-indicators {
@@ -67,17 +68,16 @@
   justify-content: center;
   gap: 6px 12px;
   padding: 12px;
-  background-color: var(--light-color);
   line-height: 0;
 }
 
 .carousel .carousel-slide-indicator button {
-  width: 24px;
-  height: 24px;
+  width: 12px;
+  height: 12px;
   margin: 0;
   padding: 0;
   border-radius: 50%;
-  background-color: #dadada;
+  background-color: #cbcbcb;
   transition: background-color 0.2s;
 }
 
@@ -91,8 +91,8 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 12px;
-  right: 12px;
+  left: -110px;
+  right: -110px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -102,18 +102,19 @@
 /* stylelint-disable-next-line no-descending-specificity */
 .carousel .carousel-navigation-buttons button {
   position: relative;
-  width: 44px;
-  height: 44px;
+  width: 75px;
+  height: 75px;
   margin: 0;
   border-radius: 50%;
   padding: 0;
-  background-color: rgba(19 19 19 / 25%);
+  background-color: #dadada;
   transition: background-color 0.2s;
+  color: white;
 }
 
 .carousel .carousel-navigation-buttons button:hover,
 .carousel .carousel-navigation-buttons button:focus-visible {
-  background-color: rgba(19 19 19 / 75%);
+  background-color: #cdcdcd;
 }
 
 .carousel .carousel-navigation-buttons button::after {
@@ -137,14 +138,14 @@
 
 @media (width >= 600px) {
   .carousel .carousel-navigation-buttons {
-    left: 24px;
-    right: 24px;
+    left: -110px;
+    right: -110px;
   }
 
   .carousel .carousel-slide .carousel-slide-content {
     --slide-content-width: calc((100% - 184px) / 2);
 
-    margin: 92px;
+    margin: 60px;
   }
 
   .carousel .carousel-slide .carousel-slide-content[data-align='justify'] {
