--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,8 +60,8 @@
   --rk-blue-dark: #1E7DDD;
 
   /* fonts */
-  --body-font-family: montserrat-normal, sans-serif, montserrat-normal-fallback;
-  --heading-font-family: solway-normal, sans-serif, solway-normal-fallback;
+  --body-font-family: 'Montserrat', sans-serif, montserrat-normal-fallback;
+  --heading-font-family: 'Solway', sans-serif, solway-normal-fallback;
 
   /* font weight */
   --font-weight-light: 300;
@@ -115,6 +115,13 @@
 
 *, ::before, ::after {
   box-sizing: border-box;
+}
+
+img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  border-style: none;
 }
 
 body {
@@ -319,6 +326,22 @@ button.secondary {
 .button.secondary.textcolor-black {
   color: var(--laz-black);
   border-color: var(--laz-black);
+}
+
+/* List */
+ul {
+  list-style: none;
+  margin: 10px;
+}
+
+ul, ol, ul ul, ol ol {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+li {
+  cursor: default;
+  text-transform: uppercase;
 }
 
 /* secondary button colors end */
