--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,7 @@
   --vaz-blue-pastel: #ECEFF4;
   --rk-blue: #D9E7F5;
   --rk-blue-dark: #1E7DDD;
+  --dark-purple: #613aaf; /* H3 color */
 
   /* fonts */
   --body-font-family: montserrat-normal, sans-serif, montserrat-normal-fallback;
@@ -72,15 +73,16 @@
 
 
   /* body sizes */
-  --body-font-size-m: 22px;
-  --body-font-size-s: 19px;
-  --body-font-size-xs: 17px;
+  --body-font-size-m: 18px;
+  --body-font-size-s: 16px;
+  --body-font-size-xs: 14px;
 
   /* heading sizes */
-  --heading-font-size-xxl: 55px;
-  --heading-font-size-xl: 44px;
-  --heading-font-size-l: 34px;
-  --heading-font-size-m: 27px;
+  --heading-font-size-3xl: 60px;
+  --heading-font-size-xxl: 44px;
+  --heading-font-size-xl: 38px;
+  --heading-font-size-l: 36px;
+  --heading-font-size-m: 30px;
   --heading-font-size-s: 24px;
   --heading-font-size-xs: 22px;
 
@@ -123,7 +125,7 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   font-family: var(--body-font-family);
-  font-size: var(--body-font-size-m);
+  font-size: var(--body-font-size-s);
   line-height: 1.4286;
 }
 
@@ -151,18 +153,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0.8em;
-  margin-bottom: 0.25em;
-  font-family: var(--heading-font-family);
-  font-weight: 600;
-  line-height: 1.25;
+  margin-top: 0;
+  margin-bottom: 1em;
+  font-weight: 700;
+  line-height: 1.35;
   scroll-margin: 40px;
+  color: var(--laz-logo-blue);
 }
 
-h1 { font-size: var(--heading-font-size-xxl); }
-h2 { font-size: var(--heading-font-size-xl); }
-h3 { font-size: var(--heading-font-size-l); }
-h4 { font-size: var(--heading-font-size-m); }
 h5 { font-size: var(--heading-font-size-s); }
 h6 { font-size: var(--heading-font-size-xs); }
 
@@ -172,8 +170,12 @@ ol,
 ul,
 pre,
 blockquote {
-  margin-top: 0.8em;
-  margin-bottom: 0.25em;
+  margin-top: 0;
+  margin-bottom: 1em;
+}
+
+.footnote {
+  font-size: var(--body-font-size-xs);
 }
 
 .center {
@@ -332,6 +334,32 @@ button.secondary {
 
 /* themes - TBD if we use product names for these or not */
 
+/* default theme */
+
+h1 {
+  font-family: var(--heading-font-family);
+  font-size: var(--heading-font-size-l);
+  margin-top: 50px;
+}
+
+h2 {
+  font-family: var(--heading-font-family);
+  font-size: var(--heading-font-size-s);
+}
+
+h3 {
+  font-family: var(--heading-font-family);
+  font-size: var(--body-font-size-m);
+  color: var(--dark-purple);
+}
+
+h4 {
+  color: inherit;
+  font-weight: var(--font-weight-medium);
+  font-size: var(--body-font-size-m);
+  font-family: var(--body-font-family);
+}
+
 [data-theme="laz-blue"] {
   background-color: var(--laz-blue);
   color: var(--white);
@@ -388,6 +416,16 @@ main > .section:first-of-type {
 @media (width >= 768px) {
   main > .section-outer > .section {
     margin: 0 auto;
+  }
+
+  h1 {
+    font-size: var(--heading-font-size-3xl);
+    margin-top: 50px;
+  }
+
+  h2 {
+    font-size: var(--heading-font-size-xxl);
+    line-height: 1.1;
   }
 }
 
