--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,7 @@
   --vaz-blue-pastel: #ECEFF4;
   --rk-blue: #D9E7F5;
   --rk-blue-dark: #1E7DDD;
+  --dark-gray: #56524e;
 
   /* fonts */
   --body-font-family: 'Montserrat', sans-serif, montserrat-normal-fallback;
@@ -74,6 +75,8 @@
   /* body sizes */
   --body-font-size-m: 22px;
   --body-font-size-s: 16px;
+  --body-font-size-xs: 14px;
+
 
   /* heading sizes */
   --heading-font-size-xxl: 55px;
