--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@
   --rk-blue: #D9E7F5;
   --rk-blue-dark: #1E7DDD;
   --dark-gray: #56524e;
+  --dark-olive-green: #3E3F30;
 
   /* fonts */
   --body-font-family: 'Montserrat', sans-serif, montserrat-normal-fallback;
