--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,5 @@
+/* stylelint-disable no-descending-specificity */
+
 /* header and nav layout */
 header .nav-wrapper {
   background-color: var(--background-color);
@@ -60,7 +62,8 @@ header .nav-sections {
   height: 100%;
 }
 
-header .nav-sections > .section, header .nav-sections > .section > div {
+header .nav-sections > .section, header .nav-sections > .section > div, header .nav-sections ul li strong {
+  display: block;
   height: 100%;
 }
 
@@ -83,7 +86,12 @@ header .nav-sections ul li {
   text-transform: uppercase;
 }
 
-/* stylelint-disable-next-line no-descending-specificity */
+header .nav-sections ul li .icon, header .nav-sections ul li .button {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 header .nav-sections ul li a {
   position: relative;
   color: var(--dark-gray);
@@ -97,7 +105,6 @@ header .nav-sections ul li a {
   text-wrap: nowrap;
   word-break: normal;
   top: 50%;
-
 }
 
 header .nav-sections ul li:not(.button-container) a:not(.button)::after {
@@ -142,9 +149,9 @@ header .nav-hamburger .navicon-line {
 
 /* secondary nav */
 header .megamenu-container {
-  border-top: 2px solid #e21d46;
+  border-top: 2px solid var(--red);
   width: 100%;
-  background-color: #fff;
+  background-color: var(--white);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s, visibility 0.3s;
@@ -154,7 +161,7 @@ header .megamenu-container {
   top: 132px;
   padding: 50px 0 58px;
   height: auto;
-  box-shadow: 0 5px 10px 0 rgba(0,0,0,0.15);
+  box-shadow: 0 5px 10px 0 rgba(0 0 0 15%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -190,7 +197,6 @@ header .megamenu ul li {
   margin-left: 0;
 }
 
-/* align everything under header .megamenu ul li vertically centered */
 header .megamenu ul li .icon, header .megamenu ul li a {
   display: inline-block;
   vertical-align: middle;
@@ -199,20 +205,19 @@ header .megamenu ul li .icon, header .megamenu ul li a {
 }
 
 header .megamenu ul li .icon{
-  background-color: #e21d46;
+  background-color: var(--red);
   min-height: 40px;
   width: 40px;
   float: left;
   border-radius: 50%;
   max-width: 30%;
   position: relative;
-  color: #fff;
+  color: var(--white);
 }
 
 header .megamenu ul li a {
-  font-size: 16px;
   font-weight: bold;
-  color: #555;
+  color: var(--dark-gray);
   line-height: 1.3;
   transition: all .2s;
   z-index: 30;
@@ -236,6 +241,38 @@ header .megamenu ul > li:not(.button-container) > a:not(.button)::after {
 
 header .megamenu .columns > div {
   align-items: flex-start;
+}
+
+header .megamenu h4 {
+  color: var(--charcoal-gray);
+}
+
+header .nav-sections ul li:not(.button-container) .megamenu h4 > a{
+  text-decoration: auto;
+}
+
+header .nav-sections ul li:not(.button-container) .megamenu h4 > a::after{
+  content: none;
+}
+
+header .megamenu .button-container a {
+  color: #f0b200;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: .5px;
+  text-decoration: none;
+  text-decoration-line: none;
+  text-decoration-style: solid;
+  text-decoration-color: currentcolor;
+  margin: 30px 0 0 15px;
+  display: flex;
+}
+
+header .megamenu .button-container a::after {
+  content: url("/icons/caret-right-solid.svg");
+  position: relative;
+  height: 10px;
+  width: 10px;
 }
 
 /* icon bg colors */
