--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,7 @@
   --dark-purple: #613aaf; /* H3 color */
   --dark-gray: #56524e;
   --dark-olive-green: #3E3F30;
+  --charcoal-gray: #45423f;
 
     /* product colors */
     --product-navy-blue: #12457e;
