--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -256,7 +256,7 @@ header .nav-sections ul li:not(.button-container) .megamenu h4 > a::after{
 }
 
 header .megamenu .button-container a {
-  color: #f0b200;
+  color: var(--gold);
   text-transform: uppercase;
   font-size: 16px;
   letter-spacing: .5px;
